--- a/TEST/240313_test.ipynb
+++ b/TEST/240313_test.ipynb
@@ -9,12 +9,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:13:14.459510Z",
-     "start_time": "2024-03-13T00:13:14.455341Z"
+     "end_time": "2024-03-13T07:57:03.081656Z",
+     "start_time": "2024-03-13T07:57:03.046111Z"
     }
    },
    "id": "9c5e8ec2594cfbc3",
-   "execution_count": 5
+   "execution_count": 131
   },
   {
    "cell_type": "markdown",
@@ -49,7 +49,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "스칼라, 0차원"
+    "연산이 빠름"
    ],
    "metadata": {
     "collapsed": false
@@ -95,7 +95,7 @@
      "data": {
       "text/plain": "(bool, bool, bool, bool, bool, bool, bool)"
      },
-     "execution_count": 114,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,12 +114,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:53.421994Z",
-     "start_time": "2024-03-13T00:41:53.416140Z"
+     "end_time": "2024-03-13T07:57:03.092963Z",
+     "start_time": "2024-03-13T07:57:03.079145Z"
     }
    },
    "id": "3931097913fa2677",
-   "execution_count": 114
+   "execution_count": 132
   },
   {
    "cell_type": "markdown",
@@ -138,7 +138,7 @@
      "data": {
       "text/plain": "tensor([[0., 0., 0., 0., 0.],\n        [0., 0., 0., 0., 0.]])"
      },
-     "execution_count": 115,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,12 +150,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:53.578808Z",
-     "start_time": "2024-03-13T00:41:53.573745Z"
+     "end_time": "2024-03-13T07:57:03.096763Z",
+     "start_time": "2024-03-13T07:57:03.090787Z"
     }
    },
    "id": "581ff0426802b5cd",
-   "execution_count": 115
+   "execution_count": 133
   },
   {
    "cell_type": "markdown",
@@ -174,7 +174,7 @@
      "data": {
       "text/plain": "tensor([[1., 0., 0., 0., 0.],\n        [0., 1., 0., 0., 0.],\n        [0., 0., 1., 0., 0.],\n        [0., 0., 0., 1., 0.],\n        [0., 0., 0., 0., 1.]])"
      },
-     "execution_count": 116,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -185,12 +185,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:53.745474Z",
-     "start_time": "2024-03-13T00:41:53.741639Z"
+     "end_time": "2024-03-13T07:57:03.103525Z",
+     "start_time": "2024-03-13T07:57:03.097046Z"
     }
    },
    "id": "c20c4cf067de52e6",
-   "execution_count": 116
+   "execution_count": 134
   },
   {
    "cell_type": "markdown",
@@ -209,7 +209,7 @@
      "data": {
       "text/plain": "tensor([[3., 3., 3., 3., 3.],\n        [3., 3., 3., 3., 3.]])"
      },
-     "execution_count": 117,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,12 +220,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:53.912299Z",
-     "start_time": "2024-03-13T00:41:53.908372Z"
+     "end_time": "2024-03-13T07:57:03.106605Z",
+     "start_time": "2024-03-13T07:57:03.102590Z"
     }
    },
    "id": "c7871318962ff1aa",
-   "execution_count": 117
+   "execution_count": 135
   },
   {
    "cell_type": "markdown",
@@ -253,25 +253,41 @@
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[0.7255, 0.2439, 0.1629],\n        [0.0217, 0.7694, 0.0217],\n        [0.6265, 0.5756, 0.6969],\n        [0.2216, 0.3649, 0.9519],\n        [0.5680, 0.3450, 0.8619]])"
+      "text/plain": "tensor([[30, 94],\n        [58, 87],\n        [75, 59],\n        [ 5, 63],\n        [24, 32]])"
      },
-     "execution_count": 118,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.rand(5,3)"
+    "torch.randint(1, 100, (5,2))"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:54.166664Z",
-     "start_time": "2024-03-13T00:41:54.160321Z"
+     "end_time": "2024-03-13T08:04:23.439152Z",
+     "start_time": "2024-03-13T08:04:23.431973Z"
     }
    },
    "id": "68d22537aaef18ba",
-   "execution_count": 118
+   "execution_count": 155
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# 8. ndarray데이터를 Pytorch에 저장하는 코드를 작성하세요.(dtype = float32)\n",
+    "import numpy as np\n",
+    "array1 = np.arange(1, 101, 7)\n",
+    "data8 = torch.as_tensor(array1, dtype=torch.float32)\n",
+    "# data8 = torch.from_numpy(array1) # from_numpy는 dtype은 못 받음\n",
+    "data8, data8.dtype"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "4e171422807fa43d"
   },
   {
    "cell_type": "markdown",
@@ -290,7 +306,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "#### tensor는 세로, 가로 순으로 들어가므로 80x120으로 만들거나 120x80.T해야"
+    "#### tensor는 세로, 가로 순으로 들어가므로 80x120으로 만들거나 120x80.T해야\n",
+    "randint(0,255)"
    ],
    "metadata": {
     "collapsed": false
@@ -314,16 +331,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([1, 2, 3, 4, 5, 6, 7, 8, 9, 0])"
-     },
-     "execution_count": 119,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "c1 = [1,2,3,4,5,6,7,8,9,0]\n",
     "c2 = torch.tensor(c1)\n",
@@ -332,37 +340,28 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:54.410244Z",
-     "start_time": "2024-03-13T00:41:54.406438Z"
+     "start_time": "2024-03-13T07:57:03.117814Z"
     }
    },
    "id": "48030f99d4cea27",
-   "execution_count": 119
+   "execution_count": null
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "tensor([[1],\n        [2],\n        [3],\n        [4],\n        [5],\n        [6],\n        [7],\n        [8],\n        [9],\n        [0]])"
-     },
-     "execution_count": 120,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "torch.unsqueeze(c2, 1)"
+    "torch.unsqueeze(c2, 1)\n",
+    "torch.transpose()\n",
+    "torch.permute()"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:54.499176Z",
-     "start_time": "2024-03-13T00:41:54.495737Z"
+     "start_time": "2024-03-13T07:57:03.119001Z"
     }
    },
    "id": "f7a3b137ef1bfbfa",
-   "execution_count": 120
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -393,15 +392,7 @@
   },
   {
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1) tensor(90) tensor(100) tensor(99)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "e1 = torch.tensor([[90, 70, 80], [70,100,80],[99,88,77]])\n",
     "print('(1)', torch.max(e1[0]), torch.max(e1[1]), torch.max(e1[2]))"
@@ -409,12 +400,11 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:54.744843Z",
-     "start_time": "2024-03-13T00:41:54.740468Z"
+     "start_time": "2024-03-13T07:57:03.120041Z"
     }
    },
    "id": "27b31ba82a5c3c7c",
-   "execution_count": 121
+   "execution_count": null
   },
   {
    "cell_type": "code",
@@ -438,12 +428,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:54.829545Z",
-     "start_time": "2024-03-13T00:41:54.826344Z"
+     "end_time": "2024-03-13T07:57:03.161734Z",
+     "start_time": "2024-03-13T07:57:03.138785Z"
     }
    },
    "id": "6df37e7772f8b092",
-   "execution_count": 122
+   "execution_count": 137
   },
   {
    "cell_type": "code",
@@ -459,7 +449,7 @@
      "data": {
       "text/plain": "(tensor(754), tensor(100))"
      },
-     "execution_count": 123,
+     "execution_count": 138,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -471,12 +461,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:55.209803Z",
-     "start_time": "2024-03-13T00:41:55.206207Z"
+     "end_time": "2024-03-13T07:57:03.183764Z",
+     "start_time": "2024-03-13T07:57:03.160740Z"
     }
    },
    "id": "7db6b2bdae044ca9",
-   "execution_count": 123
+   "execution_count": 138
   },
   {
    "cell_type": "markdown",
@@ -504,27 +494,27 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "m1 = torch.tensor([[90,70,80], [70,100,80], [99,88,77]])\n",
-    "m2 = torch.tensor([5, 2, 0.7])"
+    "m1 = torch.tensor([[90,70,80], [70,100,80], [99,88,77]], dtype=torch.float32)\n",
+    "m2 = torch.tensor([0.5, 0.2, 0.7])"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:55.558317Z",
-     "start_time": "2024-03-13T00:41:55.554747Z"
+     "end_time": "2024-03-13T08:15:02.058238Z",
+     "start_time": "2024-03-13T08:15:02.051273Z"
     }
    },
    "id": "76a57752b507a0ed",
-   "execution_count": 124
+   "execution_count": 163
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[ 95.0000,  72.0000,  80.7000],\n        [ 75.0000, 102.0000,  80.7000],\n        [104.0000,  90.0000,  77.7000]])"
+      "text/plain": "tensor([[ 90.5000,  70.2000,  80.7000],\n        [ 70.5000, 100.2000,  80.7000],\n        [ 99.5000,  88.2000,  77.7000]])"
      },
-     "execution_count": 125,
+     "execution_count": 164,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,46 +525,46 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:55.802555Z",
-     "start_time": "2024-03-13T00:41:55.798Z"
+     "end_time": "2024-03-13T08:15:02.313917Z",
+     "start_time": "2024-03-13T08:15:02.309397Z"
     }
    },
    "id": "715a111ad8e16404",
-   "execution_count": 125
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (246543544.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[0;36m  Cell \u001B[0;32mIn[126], line 1\u001B[0;36m\u001B[0m\n\u001B[0;31m    m1.\u001B[0m\n\u001B[0m       ^\u001B[0m\n\u001B[0;31mSyntaxError\u001B[0m\u001B[0;31m:\u001B[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "m1."
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:56.032092Z",
-     "start_time": "2024-03-13T00:41:56.028284Z"
-    }
-   },
-   "id": "2a299100a5ff71c6",
-   "execution_count": 126
+   "execution_count": 164
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[450.0000, 140.0000,  56.0000],\n        [350.0000, 200.0000,  56.0000],\n        [495.0000, 176.0000,  53.9000]])"
+      "text/plain": "tensor([[89.5000, 69.8000, 79.3000],\n        [69.5000, 99.8000, 79.3000],\n        [98.5000, 87.8000, 76.3000]])"
      },
-     "execution_count": 127,
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "m1.sub(m2)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-13T08:15:02.517720Z",
+     "start_time": "2024-03-13T08:15:02.513810Z"
+    }
+   },
+   "id": "2a299100a5ff71c6",
+   "execution_count": 165
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([[45.0000, 14.0000, 56.0000],\n        [35.0000, 20.0000, 56.0000],\n        [49.5000, 17.6000, 53.9000]])"
+     },
+     "execution_count": 166,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,21 +575,21 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:56.242833Z",
-     "start_time": "2024-03-13T00:41:56.237016Z"
+     "end_time": "2024-03-13T08:15:02.720803Z",
+     "start_time": "2024-03-13T08:15:02.715018Z"
     }
    },
    "id": "aea729884001ecb5",
-   "execution_count": 127
+   "execution_count": 166
   },
   {
    "cell_type": "code",
    "outputs": [
     {
      "data": {
-      "text/plain": "tensor([[ 18.0000,  35.0000, 114.2857],\n        [ 14.0000,  50.0000, 114.2857],\n        [ 19.8000,  44.0000, 110.0000]])"
+      "text/plain": "tensor([[180.0000, 350.0000, 114.2857],\n        [140.0000, 500.0000, 114.2857],\n        [198.0000, 440.0000, 110.0000]])"
      },
-     "execution_count": 128,
+     "execution_count": 167,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,26 +600,66 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:56.581998Z",
-     "start_time": "2024-03-13T00:41:56.578735Z"
+     "end_time": "2024-03-13T08:15:02.908828Z",
+     "start_time": "2024-03-13T08:15:02.904603Z"
     }
    },
    "id": "6d885695ebee7354",
-   "execution_count": 128
+   "execution_count": 167
   },
   {
    "cell_type": "code",
-   "outputs": [],
-   "source": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "tensor([115., 111., 121.])"
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# m1.dtype=torch.float32\n",
+    "m1.matmul(m2)"
+   ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-03-13T00:41:56.965571Z",
-     "start_time": "2024-03-13T00:41:56.960572Z"
+     "end_time": "2024-03-13T08:15:06.524728Z",
+     "start_time": "2024-03-13T08:15:06.506204Z"
     }
    },
    "id": "1f886b58001594ad",
-   "execution_count": 128
+   "execution_count": 169
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'dtype' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[171], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m m1\u001B[38;5;241m.\u001B[39mfloat()\n\u001B[0;32m----> 2\u001B[0m \u001B[43mdtype\u001B[49m(m1)\n",
+      "\u001B[0;31mNameError\u001B[0m: name 'dtype' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "m1.float()\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-03-13T08:15:36.790694Z",
+     "start_time": "2024-03-13T08:15:36.782071Z"
+    }
+   },
+   "id": "e824755be3e644ee",
+   "execution_count": 171
   },
   {
    "cell_type": "code",
@@ -638,7 +668,7 @@
    "metadata": {
     "collapsed": false
    },
-   "id": "e824755be3e644ee"
+   "id": "d6b02a422affd57a"
   }
  ],
  "metadata": {
